google maps integration

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -19,6 +19,22 @@
                     [barChartType]="chart.barChartType"></app-chart>
             </div>
         </div>
+        <div class="row d-flex justify-content-around">
+            <div class="card">
+                <div class="card-header-tabs card-header-primary">
+                    <div class="card-icon card-header-warning">
+                        <i class="material-icons">location_on</i>
+                    </div>
+                    <p class="card-category">Our Customers location</p>
+                    <h3 class="card-title">
+                        <app-google-map></app-google-map>
+                    </h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">The map contains Your position too.</div>
+                </div>
+            </div>
+        </div>
 
     </div>
 </div>
