Updated chart container, and charts

--- a/src/app/common/chart-new/chart-new.component.html
+++ b/src/app/common/chart-new/chart-new.component.html
@@ -1,11 +1,10 @@
 <div style="display: block">
   <canvas baseChart
-    [datasets]="barChartData"
-    [labels]="barChartLabels"
-    [options]="barChartOptions"
-    [plugins]="barChartPlugins"
-    [legend]="barChartLegend"
-    [chartType]="barChartType"
+    [datasets]="pieChartData"
+    [labels]="pieChartLabels"    
+    [plugins]="pieChartPlugins"
+    [legend]="pieChartLegend"
+    [chartType]="pieChartType"
     [colors]="chartColors">
   </canvas>
 </div>
