--- a/src/app/pages/list-order/list-order.component.html
+++ b/src/app/pages/list-order/list-order.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <div class="card">
-      <div class="card-header card-header-primary">
+      <div class="card-header card-header-success">
         <h4 class="card-title ">Order Table</h4>
         <div class="d-flex p-2 mb-3 filter__group">
           <input [(ngModel)]="filterPhrase" class="form-control mr-sm-2 filter__input px-3" type="text" placeholder="Filter..." style="width: 200px;">
