About us: 9 db kártya minta kész | Bills: modalhoz animáció hozzáadva
Az "About us" részbe 9 db kártyát készítettem, mert 7 db-nál nem volt szép md töréspont felett.

--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -64,7 +64,7 @@
     </div>
 </div>
 <!-- Modal -->
-<div class="modal" id="confirmationDialog" tabindex="-1">
+<div class="modal fade" id="confirmationDialog" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
