--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,24 +1,184 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card card-profile">
-          <div class="card-avatar">
-            <a href="javascript:void(0)">
-              <img class="img" src="./assets/img/faces/marc.jpg" />
-            </a>
-          </div>
-          <div class="card-body">
-            <h6 class="card-category text-gray">Angular master pro elite</h6>
-            <h4 class="card-title">Bonyai Péter</h4>
-            <p class="card-description">
-              Working on everything!
-            </p>
-            <a href="javascript:void(0)"
-              class="btn btn-danger btn-round">Follow</a>
+    <div class="card-deck">
+
+      <!-- First row -->
+      <div class="row">
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
           </div>
         </div>
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
       </div>
+
+      <!-- Second row -->
+      <div class="row">
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Third row -->
+      <div class="row">
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4 mb-5">
+          <div class="card card-profile">
+            <div class="card-avatar">
+              <a href="#">
+                <img class="img" src="./assets/img/faces/marc.jpg" />
+              </a>
+            </div>
+            <div class="card-body">
+              <h6 class="card-category text-gray">Angular master pro elite</h6>
+              <h4 class="card-title">Bonyai Péter</h4>
+              <p class="card-description">
+                Working on everything!
+              </p>
+              <a href="#" class="btn btn-danger btn-round">Follow</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
     </div>
   </div>
 </div>
