--- a/src/app/page/edit/edit-order/edit-order.component.html
+++ b/src/app/page/edit/edit-order/edit-order.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div *ngIf="order" class="col-6 offset-3 mt-5">
     <form #orderForm="ngForm" (ngSubmit)="setOrderToDatabase(order)">
-      <div *ngIf="!updating" class="form-group">
+      <div *ngIf="!updating && order.id" class="form-group">
+      <!-- <div *ngIf="!updating" class="form-group"> -->
         <label for="order">orderID</label>
         <input
           [(ngModel)]="order.id"
@@ -51,17 +52,22 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="customer">customerID</label>
+        <label for="customer">Vásárló (ID) név</label>
         <input
-          [(ngModel)]="order.customerID"
+          [(ngModel)]="chosenCustomer"
           id="customer"
           name="customer"
-          type="number"
+          type="string"
           class="form-control"
+          [ngbTypeahead]="search"
+          [resultFormatter]="customerResultFormatter"
+          [inputFormatter]="customerIputFormatter"
+          #instance="ngbTypeahead"
           required
+          />
+          <!-- required
           pattern="[1-9]\d?\d?\d?"
-          autofocus
-        />
+          autofocus -->
         <!-- [disabled]="!updating" -->
 
         <!-- itt a mezők üresen maradnak -->
@@ -101,16 +107,20 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="product">ProductID</label>
+        <label for="product">Termék (ID) név</label>
         <input
           id="product"
-          [(ngModel)]="order.productID"
+          [(ngModel)]="chosenProduct"
           name="product"
-          type="number"
+          type="text"
           class="form-control"
-          pattern="[1-9]\d?\d?\d?\d?"
+          [ngbTypeahead]="searchProduct"
+          [resultFormatter]="productResultFormatter"
+          [inputFormatter]="productIputFormatter"
+          #instance="ngbTypeahead"
           required
-        />
+          />
+          <!-- pattern="[1-9]\d?\d?\d?\d?" -->
         <div
           [hidden]="
             orderForm.controls.product?.valid ||
@@ -122,7 +132,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="amount">Amount</label>
+        <label for="amount">Mennyiség</label>
         <input
           [(ngModel)]="order.amount"
           id="amount"
@@ -143,7 +153,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="status">Status</label>
+        <label for="status">Státusz</label>
         <!-- <input
           [(ngModel)]="order.status"
           id="status"
