--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -26,10 +26,10 @@
                         <i class="material-icons">location_on</i>
                     </div>
                     <p class="card-category">Our Customers location</p>
-                    <h3 class="card-title">
-                        <app-google-map></app-google-map>
-                    </h3>
                 </div>
+                <h3 class="card-title mt-3 mx-3">
+                    <app-google-map></app-google-map>
+                </h3>
                 <div class="card-footer">
                     <div class="stats">The map contains Your position too.</div>
                 </div>
