Edit order validation corrected.

--- a/src/app/editors/edit-order/edit-order.component.html
+++ b/src/app/editors/edit-order/edit-order.component.html
@@ -20,21 +20,21 @@
                                 <div class="form-group">
                                     <label for="customerID">{{ attributes.customerID }}<span class="star"> *</span></label>
                                     <input name="customerID" [(ngModel)]="order.customerID" type="number" class="form-control"
-                                    pattern="^\d+$" required>
+                                    pattern="^[1-9]\d*$" required>
                                     <div [hidden]="orderForm.controls.customerID?.valid || orderForm.controls.customerID?.pristine" class="error-message">
                                         {{attributes.customerID}} is required and can only be a number.
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="productID">{{ attributes.productID }}<span class="star"> *</span></label>
-                                    <input name="productID" [(ngModel)]="order.productID" type="number" class="form-control" pattern="^\d+$" required>
+                                    <input name="productID" [(ngModel)]="order.productID" type="number" class="form-control" pattern="^[1-9]\d*$" required>
                                     <div [hidden]="orderForm.controls.productID?.valid || orderForm.controls.productID?.pristine" class="error-message">
                                         {{attributes.productID}} is required and can only be a number.
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="amount">{{ attributes.amount }}<span class="star"> *</span></label>
-                                    <input name="amount" [(ngModel)]="order.amount" type="number" class="form-control" pattern="^\d+$" required>
+                                    <input name="amount" [(ngModel)]="order.amount" type="number" class="form-control" pattern="^[1-9]\d*$" required>
                                     <div [hidden]="orderForm.controls.amount?.valid || orderForm.controls.amount?.pristine" class="error-message">
                                         {{attributes.amount}} is required and can only be a number.
                                     </div>
