--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -12,10 +12,10 @@
             </button>
         </div>
 
-        <div class="col-3 mt-0 mb-5"><select [(ngModel)]="filterKey" class="custom-select bg-light"
-                style="font-size: 20px">
-                <option *ngFor="let key of filterKeys" [value]="key">
-                    {{ key }}
+        <div class="col-3 mt-0 mb-5">
+            <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
+                <option *ngFor="let col of cols" [value]="col.key">
+                    {{ col.text }}
                 </option>
             </select>
         </div>
@@ -37,13 +37,22 @@
         <table class="table table-striped">
             <thead class="bg-dark text-light">
                 <tr>
-                    <th (click)="onColumnSelect('id')"> <b>#</b></th>
+                    <th (click)="onColumnSelect(col.key)" *ngFor="let col of cols">
+                        <span *ngIf='col.key === sortedColumn'>
+                            <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                            <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                        </span>
+
+                        {{ col.text }}
+                    </th>
+                    <th></th>
+                    <!-- <th (click)="onColumnSelect('id')"> <b>#</b></th>
                     <th (click)="onColumnSelect('orderID')"><b style="font-size: 18px">Rendelés azonosító</b></th>
                     <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Összeg (Ft)</b></th>
-                    <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th>
-                    <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
+                    <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th> -->
+                    <!-- <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
                         <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
-                    </th>
+                    </th> -->
                 </tr>
             </thead>
             <!-- <thead class="mat-sort-header">
@@ -99,6 +108,9 @@
                 </tbody>
 
             </table>
+            <footer>
+                <a href="#top" onclick="self.scrollTo(0, 0); return false;">Ugrás az oldal tetejére</a>
+            </footer>
         </div>
     </div>
 </div>
