--- a/src/app/widget/chart-container/chart-container.component.scss
+++ b/src/app/widget/chart-container/chart-container.component.scss
@@ -1,3 +1,11 @@
+.card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
+}
+
 .card {
-  width: 30rem;
+  min-width: 23rem;
 }
