listing-product modified, sroll up added

--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -125,13 +125,15 @@
             <tbody>
         </table>
         <footer>
-
-            <button class="btn btn-success my-2 my-sm-0">
+            <a href="products" class="scrollup"><span class="material-icons large">
+                    arrow_circle_up
+                </span></a>
+            <!-- <button class="btn btn-success my-2 my-sm-0">
                 <a href="product" onclick="self.scrollTo(0, 0); return false;">
                     <span class="material-icons">
                         arrow_circle_up
                     </span>
-                    Ugrás az oldal tetejére</a></button>
+                    Ugrás az oldal tetejére</a></button> -->
 
         </footer>
     </div>
