--- a/src/app/editors/edit-category/edit-category.component.html
+++ b/src/app/editors/edit-category/edit-category.component.html
@@ -5,8 +5,9 @@
             <div class="col-md-12">
                 <div class="card">
                   <div class="card-header card-header-warning">
-                    <h4 [hidden]="currentCategory.id==0" class="card-title">Category Editor</h4>
-                    <h4 [hidden]="currentCategory.id>0" class="card-title">New Category</h4>
+                    <h4 [hidden]="currentCategory.id==0" class="card-title"><i class="fa fa-cog fa-spin"></i> Category Editor</h4>
+                    <h4 [hidden]="currentCategory.id>0" class="card-title"><i class="fa fa-cog fa-spin"></i> New Category</h4>
+                   
                     <p class="card-category">Category Profile</p>
                   </div>
                   <div class="card-body">
@@ -58,7 +59,7 @@
                      <!-- {{categoryForm.valid}} -->
                      
                     </form>
-                    <button (click)="backToCategory()" type="button" class="btn btn-info back"><i class="fa fa-caret-left"></i></button>
+                    <button (click)="backToCategory()" type="button" class="btn btn-info back"><i class="fa fa-caret-right"></i></button>
 
                    
                   </div> 
