--- a/src/app/pages/categroy-list/categroy-list.component.html
+++ b/src/app/pages/categroy-list/categroy-list.component.html
@@ -48,7 +48,7 @@
                                             {{ category[attribute.key] }}</td>                                            
                                         <td>
                                             <div class="btn-group">
-                                                <div class="btn btn-info play" (click)="speak(category.name+category.description)" ><i class="fa  fa-play-circle"></i></div>
+                                                <div class="btn btn-info play " (click)="speak(category.name+category.description)" ><i class="fa  fa-play-circle"></i></div>
                                                 <button [routerLink]="['/category/',category.id]" 
                                                 
                                                     class="btn btn-info">
@@ -82,7 +82,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-            </div>{{category }}
+            </div>
             <div class="modal-body">
                 <p><strong>Are you sure you want to delete: <span class="text-primary"></span></strong></p>
                 <p><strong><span class="text-primary">{{delCategory.name}} {{delCategory.description}}</span>?</strong></p>
