--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -105,6 +105,11 @@
                     <p><b style="font-size: 18px">
                    ͏͏͏͏͏͏͏Még nem fizetett rendelések száma: {{ numberOfUnpaidOrders$ | async }}</b></p>
                   </div>
+                  <th></th>
+                  <th></th>
+                  <div class="d-flex justify-content-end">
+                    <a href="#top" onclick="self.scrollTo(0, 0); return false;" class="material-icons icon-white" d-flex justify-content-end>arrow_circle_up</a>
+                  </div>
               </div>
 
             </tr>
@@ -115,7 +120,10 @@
 
       </table>
       <footer>
-        <a href="#top" onclick="self.scrollTo(0, 0); return false;">Ugrás az oldal tetejére</a>
+
+
+
+
 
       </footer>
   </div>
