--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -15,11 +15,14 @@
   justify-content: flex-end,
 }
 
-
+.icon-white {
+  color: white;
+  font-size: 50px;
+}
 th {
   user-select: none;
 }
-
+.button4 {border-radius: 12px;}
 
 
 
