listing-customer modified

--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -1,11 +1,10 @@
 <div class="container">
-
     <div class="row">
         <div class="col-4 offset-5 mb-5">
-            <h2>ÖSSZES TERMÉK</h2>
+            <h2>TERMÉKEK</h2>
         </div>
-        <div class="col-12 my-3 mb-3">
 
+        <div class="col-12 my-3 mb-3">
             <button class="btn btn-success btn-block mt-3 mb-5" style="font-size:14px" [routerLink]="[0]">
                 <i class="material-icons">add</i> ÚJ TÉTEL LÉTREHOZÁSA
             </button>
