--- a/src/app/page/header/header.component.scss
+++ b/src/app/page/header/header.component.scss
@@ -10,6 +10,13 @@
   padding-bottom: 10px;
 }
 
+@media only screen and (max-width: 991px) {
+.navbar {
+    width: calc(100%-64px);
+  margin-left: 32px;
+}
+}
+
 .headerText {
   user-select: none;
 }
