--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -16,13 +16,17 @@
 }
 
 .icon-white {
-  color: white;
+  color: red;
   font-size: 50px;
+  padding-right: 4px;
+
 }
+
 th {
   user-select: none;
 }
-.button4 {border-radius: 12px;}
+
+
 
 
 
