--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -39,8 +39,8 @@
       <tr>
         <th (click)="onColumnSelect(col.key)" *ngFor="let col of cols">
           <span *ngIf='col.key === sortedColumn'>
-            <i *ngIf="!direction" class="fa fa-sort-alpha-asc"></i>
-            <i *ngIf="direction" class="fa fa-sort-alpha-desc"></i>
+            <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+            <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
           </span>
 
           {{ col.text }}
