--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -35,7 +35,7 @@
           placeholder="Keresés"
         />
         <button
-          class="btn btn-success my-2 my-sm-0"
+          class="btn btn-success ml-lg-2 my-2 my-sm-0"
           type="submit"
           style="font-size: 14px"
         >
