--- a/src/app/page/listing/listing-product/listing-product.component.scss
+++ b/src/app/page/listing/listing-product/listing-product.component.scss
@@ -4,25 +4,15 @@
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
-
-th {
-    cursor: pointer;
-    user-select: none;
+.bg-dark:hover {
+  cursor: pointer,
 }
-
-td {
-  text-align: center; 
-  vertical-align: middle;
-}
-
 .material-icons {
-  font-size: 24px;
+  font-size: 24px,
 }
-
 #arrow {
   display: flex;
   justify-content: flex-end,
-  
 }
 
 .icon-white {
@@ -30,6 +20,11 @@ td {
   font-size: 50px;
   padding-right: 4px;
 
+}
+
+th {
+  user-select: none;
+  text-align: center;
 }
 
 
