--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -39,8 +39,8 @@
       <tr>
         <th (click)="onColumnSelect(col.key)" *ngFor="let col of cols">
           <span *ngIf='col.key === sortedColumn'>
-            <i *ngIf="!direction" class="fa fa-sort-alpha-asc"></i>
-            <i *ngIf="direction" class="fa fa-sort-alpha-desc"></i>
+            <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+            <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
           </span>
 
           {{ col.text }}
@@ -48,7 +48,7 @@
         <th></th>
         <th></th>
         <th></th>
-        <th></th>
+        <th>Műveletek</th>
       </tr>
     </thead>
     <tbody>
@@ -101,10 +101,16 @@
           <th></th>
           <th></th>
           <th></th>
+          <div *ngIf="numberOfActiveCustomers$| async">
+            ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Aktív vásárló: {{ numberOfActiveCustomers$ | async }}</b></p>
+          </div>
           <th></th>
           <th></th>
           <th></th>
-
+          <th></th>
+          <div *ngIf="numberOfPassiveCustomers$| async">
+            ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Passzív vásárló: {{ numberOfPassiveCustomers$ | async }}</b></p>
+          </div>
           <th></th>
 
         </tr>
