--- a/src/app/page/edit/edit-order/edit-order.component.html
+++ b/src/app/page/edit/edit-order/edit-order.component.html
@@ -12,44 +12,7 @@
           class="form-control"
           disabled
         />
-        <!--
-            pattern="[1-9]\d?\d?\d?"
-            [disabled]="!updating" -->
-        <!-- itt a mezők üresen maradnak -->
-        <!-- <input
-          id="customerID"
-          type="string"
-          name="customerID"
-          class="form-control"
-          [(ngModel)]="choosenCustomer"
-          [ngbTypeahead]="search"
-          [resultFormatter]="customerResultFormatter"
-          [inputFormatter]="customerIputFormatter"
-          #instance="ngbTypeahead"
-        /> -->
-        <!-- ez részlegesen működik, de a customer mező üresen marad  -->
-        <!-- <input
-          id="customerID"
-          type="string"
-          name="customerID"
-          value="order.customerID"
-          class="form-control"
-          [(ngModel)]="chosenCustomer"
-          [ngbTypeahead]="search"
-          [resultFormatter]="customerResultFormatter"
-          [inputFormatter]="customerIputFormatter"
-          #instance="ngbTypeahead"
-        /> -->
-
-        <div
-          [hidden]="
-            orderForm.controls.customer?.valid ||
-            orderForm.controls.customer?.pristine
-          "
-          class="error-message"
-        >
-          Kötelezően kitöltendő mező! Maximum 4-jegyű szám.
-        </div>
+        <!-- pattern="[1-9]\d?\d?\d?" -->
       </div>
       <div class="form-group">
         <label for="customer">Vásárló (ID) név</label>
@@ -57,44 +20,18 @@
           [(ngModel)]="chosenCustomer"
           id="customer"
           name="customer"
-          type="string"
+          type="text"
           class="form-control"
           [ngbTypeahead]="search"
           [resultFormatter]="customerResultFormatter"
           [inputFormatter]="customerIputFormatter"
           #instance="ngbTypeahead"
           required
-          />
-          <!-- required
-          pattern="[1-9]\d?\d?\d?"
-          autofocus -->
-        <!-- [disabled]="!updating" -->
-
-        <!-- itt a mezők üresen maradnak -->
-        <!-- <input
-          id="customerID"
-          type="string"
-          name="customerID"
-          class="form-control"
-          [(ngModel)]="choosenCustomer"
-          [ngbTypeahead]="search"
-          [resultFormatter]="customerResultFormatter"
-          [inputFormatter]="customerIputFormatter"
-          #instance="ngbTypeahead"
-        /> -->
-        <!-- ez részlegesen működik, de a customer mező üresen marad  -->
-        <!-- <input
-          id="customerID"
-          type="string"
-          name="customerID"
-          value="order.customerID"
-          class="form-control"
-          [(ngModel)]="chosenCustomer"
-          [ngbTypeahead]="search"
-          [resultFormatter]="customerResultFormatter"
-          [inputFormatter]="customerIputFormatter"
-          #instance="ngbTypeahead"
-        /> -->
+          placeholder="Kezdjen gépelni, majd válasszon a menüből!"
+          autofocus
+                    />
+                    <!-- pattern=".{1-40}" -->
+                    <!-- pattern="\([0-9]{1-3}\) \w{1-40}" -->
 
         <div
           [hidden]="
@@ -103,8 +40,9 @@
           "
           class="error-message"
         >
-          Kötelezően kitöltendő mező! Maximum 4-jegyű szám.
+          Kötelezően kitöltendő mező!
         </div>
+
       </div>
       <div class="form-group">
         <label for="product">Termék (ID) név</label>
@@ -119,7 +57,9 @@
           [inputFormatter]="productIputFormatter"
           #instance="ngbTypeahead"
           required
+          placeholder="Kezdjen gépelni, majd válasszon a menüből!"
           />
+          <!-- pattern="\([0-9]{1-3}\) \w{1-40}" -->
           <!-- pattern="[1-9]\d?\d?\d?\d?" -->
         <div
           [hidden]="
@@ -128,7 +68,7 @@
           "
           class="error-message"
         >
-          Kötelezően kitöltendő mező! Maximum 5-jegyű szám.
+          Kötelezően kitöltendő mező!
         </div>
       </div>
       <div class="form-group">
@@ -154,15 +94,7 @@
       </div>
       <div class="form-group">
         <label for="status">Státusz</label>
-        <!-- <input
-          [(ngModel)]="order.status"
-          id="status"
-          name="status"
-          type="text"
-          class="form-control"
-          required
-          pattern="^(new|shipped|paid)$"
-        /> -->
+        <!-- pattern="^(new|shipped|paid)$" /> -->
         <select
           [(ngModel)]="order.status"
           class="form-control"
@@ -176,18 +108,11 @@
         </select>
 
         <!-- new|shipped|paid -->
-        <div
-          [hidden]="
-            orderForm.controls.status?.valid ||
-            orderForm.controls.status?.pristine
-          "
-          class="error-message"
-        >
-          Kötelezően kitöltendő mező! Csak new, shipped vagy paid lehet.
-        </div>
       </div>
+      <!-- [disabled]="orderForm.invalid || updating || (!orderForm.controls.customer?.valid && orderForm.controls.customer.touched)" -->
+      <!-- [disabled]="!orderForm?.valid || !orderForm.controls.customer?.valid || !orderForm.controls.product?.valid || !orderForm.controls.amount?.valid" -->
       <button
-        [disabled]="orderForm.invalid || updating"
+      [disabled]="orderForm.invalid"
         class="btn btn-block btn-primary"
       >
         <i *ngIf="!updating" class="fa fa-save"></i>
