listing bill mod

--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -45,6 +45,7 @@
 
                         {{ col.text }}
                     </th>
+                    <th class="justify-content-end">Műveletek</th>
                     <th></th>
                     <!-- <th (click)="onColumnSelect('id')"> <b>#</b></th>
                     <th (click)="onColumnSelect('orderID')"><b style="font-size: 18px">Rendelés azonosító</b></th>
