--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -66,7 +66,7 @@
           {{ customer.email }}
         </td>
         <td>
-          {{ customer.address.zip }} {{ customer.address.country }} {{ customer.address.city }}
+          {{ customer.address.zip }} {{ customer.address.country }} {{ customer.address.city }} {{ customer.address.street }}
         </td>
         <td>
           {{ customer.active }}
