--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -6,7 +6,7 @@
 
         <div class="col-12 my-3 mb-3">
             <!-- <div class="col-5"> -->
-            <button class="btn btn-success btn-block mt-0 mb-5 ml-0" style="font-size:14px" [routerLink]="[0]">
+            <button class="btn btn-success btn-block mt-3 mb-5" style="font-size:14px" [routerLink]="[0]">
                 <i class="material-icons">add</i>
                 ÚJ SZÁMLA LÉTREHOZÁSA
             </button>
@@ -34,90 +34,90 @@
             <!-- </div> -->
         </div>
 
-        <table class="table table-striped">
-            <thead class="bg-dark text-light text-center">
-                <tr>
-                    <th (click)="onColumnSelect(col.key)" *ngFor="let col of cols">
-                        <span *ngIf='col.key === sortedColumn'>
-                            <i *ngIf="!direction" class="fa fa-sort-alpha-asc"></i>
-                            <i *ngIf="direction" class="fa fa-sort-alpha-desc"></i>
-                        </span>
+    </div>
 
-                        {{ col.text }}
-                    </th>
-                    <th class="justify-content-end">Műveletek</th>
-                    <th></th>
-                    <!-- <th (click)="onColumnSelect('id')"> <b>#</b></th>
+    <table class="table table-striped">
+        <thead class="bg-dark text-light">
+            <tr>
+                <th (click)="onColumnSelect(col.key)" *ngFor="let col of cols">
+                    <span *ngIf='col.key === sortedColumn && ! firstSorting'>
+                        <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                        <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                    </span>
+                    {{ col.text }}
+                </th>
+                <th>Műveletek</th>
+                <!-- <th (click)="onColumnSelect('id')"> <b>#</b></th>
                     <th (click)="onColumnSelect('orderID')"><b style="font-size: 18px">Rendelés azonosító</b></th>
                     <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Összeg (Ft)</b></th>
                     <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th> -->
-                    <!-- <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
+                <!-- <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
                         <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
                     </th> -->
-                </tr>
-            </thead>
-            <!-- <thead class="mat-sort-header">
+            </tr>
+        </thead>
+        <!-- <thead class="mat-sort-header">
                 <tr> -->
-            <!-- <th *ngFor="let col of cols" (click)="onColumnSelect('columnKey')">{{ col.text }}</th> -->
-            <!-- <th (click)="onColumnSelect('id')">ID</th>
+        <!-- <th *ngFor="let col of cols" (click)="onColumnSelect('columnKey')">{{ col.text }}</th> -->
+        <!-- <th (click)="onColumnSelect('id')">ID</th>
                     <th (click)="onColumnSelect('orderID')">Order ID</th>
                     <th (click)="onColumnSelect('amount')">Amount</th>
                     <th (click)="onColumnSelect('status')">Status</th> -->
-            <!-- <th><i *ngIf="!direction" class="fa fa-arrow-up"></i>
+        <!-- <th><i *ngIf="!direction" class="fa fa-arrow-up"></i>
                         <i *ngIf="direction" class="fa fa-arrow-down"></i>
                     </th>
                 </tr>
             </thead> -->
-            <tbody>
+        <tbody>
 
-                <tr *ngFor="let bill of billList$ | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
-                    <td>{{bill.id}}</td>
-                    <td>{{bill.orderID}} </td>
-                    <td>{{bill.amount | hunFormat }}</td>
-                    <td>{{bill.status}}</td>
-                    <td>
-                        <div class="btn-group d-flex justify-content-end">
-                            <button [routerLink]="[bill.id]" class="btn btn-info">
-                                <i class="material-icons">edit</i>
-                            </button>
-                            <button (click)="onRemove(bill)" class="btn btn-danger">
-                                <i class="material-icons">delete_outline</i>
-                            </button>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="table-responsive">
-            <table class="table" id="summaries">
-                <thead class="bg-dark text-light">
-                    <!-- <th style="font-size: 18px">Összes számla</th> -->
-                    <div class="ml-3" *ngIf="numberOfAllBills$ | async">
-                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Összes számla: {{ numberOfAllBills$ | async }}</b></p>
+            <tr *ngFor="let bill of billList$ | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
+                <td>{{bill.id}}</td>
+                <td>{{bill.orderID}} </td>
+                <td>{{bill.amount | hunFormat }}</td>
+                <td>{{bill.status}}</td>
+                <td>
+                    <div class="btn-group d-flex justify-content-center">
+                        <button [routerLink]="[bill.id]" class="btn btn-info">
+                            <i class="material-icons">edit</i>
+                        </button>
+                        <button (click)="onRemove(bill)" class="btn btn-danger">
+                            <i class="material-icons">delete_outline</i>
+                        </button>
                     </div>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <div class="ml-3" *ngIf="sumOfUnpaidBills$ | async | hunFormat">
-                        ͏͏͏͏͏͏͏<p>
-                            <b style="font-size: 18px">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async }}
-                            </b>
-
-                        </p>
-                    </div>
-                </thead>
-                <tbody>
-                </tbody>
-
-            </table>
-            <footer>
-                <div class="d-flex justify-content-end">
-                    <a href="#top" onclick="self.scrollTo(0, 0); return false;" class="material-icons icon-white" d-flex
-                        justify-content-end>backup</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="table-responsive">
+        <table class="table" id="summaries">
+            <thead class="bg-dark text-light">
+                <!-- <th style="font-size: 18px">Összes számla</th> -->
+                <div class="ml-3" *ngIf="numberOfAllBills$ | async">
+                    ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Összes számla: {{ numberOfAllBills$ | async }}</b></p>
                 </div>
-            </footer>
-        </div>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <div class="ml-3" *ngIf="sumOfUnpaidBills$ | async | hunFormat">
+                    ͏͏͏͏͏͏͏<p>
+                        <b style="font-size: 18px">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async }}
+                        </b>
+
+                    </p>
+                </div>
+            </thead>
+            <tbody>
+            </tbody>
+
+        </table>
+        <footer>
+            <div class="d-flex justify-content-end">
+                <a href="#top" onclick="self.scrollTo(0, 0); return false;" class="material-icons icon-white" d-flex
+                    justify-content-end>backup</a>
+            </div>
+        </footer>
     </div>
+
 </div>
