Anim filter field

--- a/src/app/editors/edit-category/edit-category.component.html
+++ b/src/app/editors/edit-category/edit-category.component.html
@@ -59,7 +59,7 @@
                      <!-- {{categoryForm.valid}} -->
                      
                     </form>
-                    <button (click)="backToCategory()" type="button" class="btn btn-info back"><i class="fa fa-caret-right"></i></button>
+                    <button (click)="backToCategory()" type="button" class="btn btn-info back"><i class="fa fa-caret-left"></i></button>
 
                    
                   </div> 
