--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -149,16 +149,17 @@
       <tbody></tbody>
     </table>
     <footer>
-      <div class="d-flex justify-content-end">
-        <a
-          href="#top"
-          onclick="self.scrollTo(0, 0); return false;"
-          class="material-icons icon-white"
-          d-flex
-          justify-content-end
-          >backup</a
-        >
-      </div>
+
     </footer>
   </div>
+</div>
+<div id="backup"  class="d-flex justify-content-end">
+  <a
+    href="#top"
+    onclick="self.scrollTo(0, 0); return false;"
+    class="material-icons icon-white"
+    d-flex
+    justify-content-end
+    >backup</a
+  >
 </div>
