--- a/src/app/page/edit/edit-order/edit-order.component.html
+++ b/src/app/page/edit/edit-order/edit-order.component.html
@@ -3,7 +3,7 @@
     <form #orderForm="ngForm" (ngSubmit)="setOrderToDatabase(order)">
       <div *ngIf="!updating && order.id" class="form-group">
       <!-- <div *ngIf="!updating" class="form-group"> -->
-        <label for="order">orderID</label>
+        <label for="order">Rendelésszám</label>
         <input
           [(ngModel)]="order.id"
           id="order"
@@ -15,7 +15,7 @@
         <!-- pattern="[1-9]\d?\d?\d?" -->
       </div>
       <div class="form-group">
-        <label for="customer">Vásárló (ID) név</label>
+        <label for="customer">Vásárló neve</label>
         <input
           [(ngModel)]="chosenCustomer"
           id="customer"
@@ -29,7 +29,8 @@
           required
           placeholder="Kezdjen gépelni, majd válasszon a menüből!"
           autofocus
-                    />
+          />
+          <!-- pattern="[A-Za-z]{1-30}" -->
                     <!-- pattern=".{1-40}" -->
                     <!-- pattern="\([0-9]{1-3}\) \w{1-40}" -->
 
@@ -45,7 +46,7 @@
 
       </div>
       <div class="form-group">
-        <label for="product">Termék (ID) név</label>
+        <label for="product">Film címe</label>
         <input
           id="product"
           [(ngModel)]="chosenProduct"
@@ -59,6 +60,7 @@
           required
           placeholder="Kezdjen gépelni, majd válasszon a menüből!"
           />
+          <!-- pattern="[A-Za-z]{1-30}" -->
           <!-- pattern="\([0-9]{1-3}\) \w{1-40}" -->
           <!-- pattern="[1-9]\d?\d?\d?\d?" -->
         <div
