--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -31,7 +31,16 @@ th {
   bottom: 5rem;
   right: 4rem;
 }
+tbody > tr > td {
 
+  height:20px;
+  padding:0px;
+  border-top: 0px;
+}
+.ujrendeles{
+ margin-top: 0;
+ margin-bottom: 0;
+}
 
 
 
