--- a/src/app/widget/chart-container/chart-container.component.html
+++ b/src/app/widget/chart-container/chart-container.component.html
@@ -1,5 +1,5 @@
 <div class="card-container">
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -12,7 +12,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -25,7 +25,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -38,7 +38,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -51,7 +51,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -64,7 +64,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -77,7 +77,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -91,7 +91,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
@@ -104,7 +104,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col">
     <div class="card">
       <div class="card-header card-header-text card-header-primary">
         <div class="card-text">
