Hamburger menü beszúrva

--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
   >
     <a routerLink="/" class="simple-text logo-normal">Filmes webshop</a>
   </div>
-  <div class="sidebar-wrapper">
+  <div class="sidebar-wrapper" id="mainMenu">
     <ul class="nav">
       <li
         class="nav-item"
@@ -66,3 +66,4 @@
     </ul>
   </div>
 </div>
+
