--- a/src/app/common/pie-chart/pie-chart.component.html
+++ b/src/app/common/pie-chart/pie-chart.component.html
@@ -1,5 +1,5 @@
 <div class="card card-chart">
-    <div class="card-header card-header-success">
+    <div class="card-header" class= "{{ cardColor }}">
         <div style="display: block;">
             <canvas baseChart
                 [data]="pieChartData"
