--- a/src/app/pages/list-customer/list-customer.component.html
+++ b/src/app/pages/list-customer/list-customer.component.html
@@ -32,7 +32,7 @@
               </thead>
 
               <tbody>
-                <tr
+                <tr class="table__row" 
                   *ngFor="let customer of customerList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection">
                   <td *ngFor="let col of cols">
                     <input *ngIf="col.type === 'check'" [(ngModel)]="customer[col.key]" type="checkbox"
