--- a/src/app/pages/list-order/list-order.component.html
+++ b/src/app/pages/list-order/list-order.component.html
@@ -31,7 +31,7 @@
                 </th>
               </thead>
               <tbody>
-                <tr
+                <tr class="table__row" 
                   *ngFor="let order of orderList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection">
                   <td *ngFor="let col of cols">
                     <span>{{ order[col.key] }}</span>
