--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container top">
+    <a class="jump-top" href="products#top"><i class="fa fa-arrow-circle-up"></i></a>
     <div class="row">
         <div class="col-4 offset-5 mb-3 mt-0">
             <h2>TERMÉKEK</h2>
@@ -123,11 +124,5 @@
             </thead>
             <tbody>
         </table>
-        <footer>
-            <div id="backup" class="d-flex justify-content-end">
-                <a href="#top" onclick="self.scrollTo(0, 0); return false;" class="material-icons icon-white" d-flex
-                    justify-content-end>backup</a>
-            </div>
-        </footer>
     </div>
 </div>
