--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container top">
+  <a class="jump-top" href="products#top"><i class="fa fa-arrow-circle-up"></i></a>
   <div class="row">
     <div class="col-4 offset-5 mb-3 mt-0">
       <h2>RENDELÉSEK</h2>
@@ -148,17 +149,6 @@
       </thead>
       <tbody></tbody>
     </table>
-    <footer>
-
-    </footer>
   </div>
 </div>
-<div id="backup"  class="d-flex justify-content-end">
-  <a
-    href="#top"
-    onclick="self.scrollTo(0, 0); return false;"
-    class="material-icons icon-white"
 
-    >backup</a
-  >
-</div>
